--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "eslint-plugin-react": "^2.3.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2"
+    "webpack-dev-server": "^1.8.2",
+    "nuclear-js": "^1.1.1"
   },
   "dependencies": {
     "react": "^0.13.0"
